# ghostpost_backend

./: README.md  db.sqlite3  manage.py  pyproject.toml
api/: models.py  serializer.py  views.py
api/migrations/: 0001_initial.py
ghostpost_backend/: asgi.py  settings.py  urls.py  wsgi.py
